tags/3.4/todo.rst
###########################
Возможные будущие изменения
###########################

* Возможно перевести сайты Безантракта на работу по **HTTPS** (в том числе с учётом возможности получить wildcard-серификат в *Let's Encrypt*). Перед этим нужно будет уточнить, что нужно будет предпринять для правильной склейки ссылок (старых с **HTTP** и новых с **HTTPS**) в индексах поисковых систем.

* Возможно перенести главный воронежский сайт на поддомен ``vrn.bezantrakta.ru``, а основной домен ``bezantrakta.ru`` оставить для общей информации и выбора городов.

* Наряду с возможными **наценками** на каждый билет в заказе можно предусмотреть и возможные **скидки**, например, используя *промокоды*.

.. only:: dev

  * Переименовать все поля с *UUID* из ``id`` в ``uuid``, чтобы не путать их с другими числовыми или произвольными идентификаторами.

  * Сделать некоторые страницы, создаваемые в HTML в модели ``Article`` (*"Публичная оферта"*, *"Реклама"*, возможно *"Контакты"*) динамически генерируемыми в приложении ``seo``, чтобы избежать дублирования.

  * Связать баннеры в модели ``BannerGroupItem`` с контейнерами через модель ``EventContainerBinder`` для того, чтобы получать все элементы в контейнере однои запросом, а не делать 2 запроса для событий и баннеров и объединять их перед выводом в шаблоне.

  * Разбить приложение ``event`` на отдельные приложения ``event_category``, ``container``, ``event_link``, ``venue``, т.к. их функционал разрастается и становится слишком широким для одного приложения.

  * Добавить в модель ``EventVenue`` поля ``address`` (адрес), ``latitude`` и ``longitude`` (географические координаты).

  * Добавить в модель ``BannerItem`` поле ``script`` (скрипт, который может потребоваться при клике на изображение баннера).
